# rust-url-shortener

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: config.rs  data.rs  main.rs
