[package]
name = "rust-url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["rt", "macros", "rt-multi-thread"] }
redis = { version = "0.22", features = ["tokio-comp", "json"] }
chrono = { version = "0.4.23", features = ["serde"] }
